--- a/docs/_posts/2021-03-09-why-write.md
+++ b/docs/_posts/2021-03-09-why-write.md
@@ -13,6 +13,5 @@ Years ago I was fired from a job in communication and events that I loved. I was
 
 In the same way, writing here makes me a better learner, digging deeper into each subject I'm intend to write about. Of course I'll make mistakes and write a lot of bullshit. But it is all part of this learning process.
 
-Also, in the very beggining (I mean, first days researching some topics) I found it very hard to understand some basic concepts, the way it was written was very hard to understand, like it was in some kind _lingo_ I couldn't get. Perhaps it was written by someone who's been a coder for ages, and so it is hard to write in a "for dummies" way. So the idea here is to also help other "dummies" in coding to understand the bacics by writing in a no coder _lingo_.
-
+Also, in the very beginning (I mean, first days researching some topics) I found it very hard to understand some basic concepts, the way it was written was very hard to understand, like it was in some kind _lingo_ I couldn't get. Perhaps it was written by someone who's been a coder for ages, and so it is hard to write in a "for dummies" way. So the idea here is to also help other "dummies" in coding to understand the basics by writing in a no coder _lingo_.
 
