fixed some typos on posts

--- a/docs/_posts/2021-03-09-why-write.md
+++ b/docs/_posts/2021-03-09-why-write.md
@@ -1,5 +1,5 @@
 ---
-title: why I write?
+title: Why I write?
 date: 2021-03-09
 tags: 
   - blog
@@ -7,11 +7,11 @@ tags:
   - coding
 author: Elena Volpato
 featuredimg: '/assets/img/english_teacher.png'
-summary: writing about what I'm learning makes me learn better
+summary: Writing about what I'm learning makes me learn better
 ---
 Years ago I was fired from a job in communication and events that I loved. I was crushed, depressed, jobless and thinking about changing areas. So, I got a job as a English teacher in a franchise called YouMove in Sao Paulo. During that time I learned so much by teaching others: one thing is to understand something, another is being able to explain it to somebody else. To do so, you really have to understand the concept and be able to give examples, be didactic and, because of that, I had to research even deeper about the subjects. But, I'm not here to write about my teaching experience.
 
-In the same way, writing here makes me a better learner, digging deeper into each subject I'm intend to write about. Of course I'll make mistakes and write a lot of bullshit. But it is all part of this learning process.
+In the same way, writing here makes me a better learner, digging deeper into each subject I intend to write about. Of course I'll make mistakes and write a lot of bullshit along the way. But it is all part of this learning process.
 
 Also, in the very beginning (I mean, first days researching some topics) I found it very hard to understand some basic concepts, the way it was written was very hard to understand, like it was in some kind _lingo_ I couldn't get. Perhaps it was written by someone who's been a coder for ages, and so it is hard to write in a "for dummies" way. So the idea here is to also help other "dummies" in coding to understand the basics by writing in a no coder _lingo_.
 
