fixed typo in the mediation timer text

--- a/docs/_posts/2021-03-09-why-write.md
+++ b/docs/_posts/2021-03-09-why-write.md
@@ -4,7 +4,7 @@ date: '2021-03-09'
 tags: 
   - blog
   - learning
-  - coding
+  - code
 author: Elena Volpato
 featuredimg: '/assets/img/english_teacher.png'
 summary: Writing about what I'm learning makes me learn better
