--- a/docs/_posts/2021-05-13-bugs.md
+++ b/docs/_posts/2021-05-13-bugs.md
@@ -1,35 +1,38 @@
 ---
-title: Bugs - natural and annoying 
+title: Bugs  🐞  a natural part of developing  
 date: '2021-05-13'
 tags: 
   - meditation
   - app
   - bugs
+  - open source
 author: Elena Volpato
 featuredimg: '/assets/bug.jpeg'
 summary: Bugs that became the priority in the meditation timer app
 ---
 ### Bugs are a natural part of the process in web development
 
-After releasing the first usable version of the [meditation timer app](https://meditate.elenavolpato.me/) with its basic features, I had already established some other goals. But as I (and some friends) started using it, naturally, new bugs made their way to the top of the list of priorities:
+In web development bugs will be a common part of the process. Your tester friends will find them and you will find issues yourself. 
+
+After releasing the first usable version of the [meditation timer app](https://meditate.elenavolpato.me/) with its basic features, I had already established some other goals. But as I (and some friends) started using it new bugs appeared and made their way to the top of the priorities list. They are:
  
 1. When using it in any smart phone, **the screen will eventually turn off and the bells won't play**. So I had to discover how to keep the screen on.
 
 2. **Make it available off-line**. It is such a simple app that it makes no sense for it to require internet connection to be able to use it.
 
-That being said, **I started working on number 1**. 
+That being said, **I started working on the first one**. 
 
-### Issue #1
+### 🐞 No. 1
 
 I knew that in order to keep the screen on, one can keep an "invisible" video running. To test this, I put a real video and tested on my phone. The video player, but it did not stop the screen from dimming and shutting down. So, I started searching some other methods. I found this `Screen Wake Lock API` in the [w3c page](https://w3c.github.io/screen-wake-lock/), read the documentation and then, to actually understand how to use this in an example, I went to [this page](https://w3c-test.org/screen-wake-lock/):
 
 <img width="100%" style="margin: 0.5rem;" src="/assets/screenshotw3c.png" alt="screen wake lock w3c page screenshot">
 
-And I clicked in almost everything in this page and didn't found a demo as I expected, only code. One of the biggest struggles in learning code is the lack of good explanations - this is an example of this. The documentation is ok to understand, but this page lost me. In my opinion, only an experienced developer can actually get this with ease.
+And I clicked in almost everything in this page and didn't found a demo as I expected, only code. One of the biggest struggles in learning code is the lack of good explanations - this is an example of this. The documentation is ok to understand, but this page got me lost. In my opinion, only an experienced developer can actually understand this with ease.
 
-After this, I came upon [wakeLock documentation in mozilla](https://developer.mozilla.org/en-US/docs/Web/API/WakeLock) and found out it is still in a experimental phase, so some browsers don't support it yet. 
+After that, I came upon [wakeLock documentation in mozilla](https://developer.mozilla.org/en-US/docs/Web/API/WakeLock) and found out it is still in a experimental phase, so some browsers don't support it yet. 
 
-Then, I decided to look into my benchmark, the [meditation timer app](https://meditation-timer.netlify.app/) by [Ben Hall](https://github.com/benji6). And found out something wonderful! There is a library that already does all that to you and it has a straight to the point name: [NoSleep.js.](https://github.com/richtr/NoSleep.js/) by [Rich Tibbett](https://github.com/richtr). Open source is beautiful! 😁
+Then, I decided to look into my benchmark, the [meditation timer app](https://meditation-timer.netlify.app/) by [Ben Hall](https://github.com/benji6). And found out something wonderful! There is a library that already does all that for you and it has a straight to the point name: [NoSleep.js.](https://github.com/richtr/NoSleep.js/) by [Rich Tibbett](https://github.com/richtr). Open source is beautiful! 😁
 
 ### NoSleep.js, how does it work?
 
@@ -39,7 +42,7 @@ In a nutshell, it tries a bunch of different `if else` rules that go from checki
 
 First it tries to detect a native **Wake Lock API support**. If it isn't supported, then it creates a video in a loop with two different formats, _.webm_ and _.mp4_ also to guarantee it will work in all platforms. Then, it also puts this video in an eternal loop. So, whil using the library, all I had to do was add `noSleep.enable()` to the play button function and add `noSleep.disable()` to the function that ends the meditation. You can see my code [here](https://gitlab.com/elena_volpato/meditate/-/blob/master/src/views/Meditate.vue).
 
-That being done, I'm gonna work on making it available offline.
+Now, I'm gonna work on making it available offline.
 
 
 _The picture above is from [yokohamayomama flickr](https://www.flickr.com/photos/yokohamayomama/5790734866/)._
