--- a/docs/_posts/2021-05-13-bugs.md
+++ b/docs/_posts/2021-05-13-bugs.md
@@ -24,9 +24,9 @@ That being said, **I started working on the first one**.
 
 ### 🐞 No. 1
 
-I knew that in order to keep the screen on, one can keep an "invisible" video running. To test this, I put a real video and tested on my phone. The video player, but it did not stop the screen from dimming and shutting down. So, I started searching some other methods. I found this `Screen Wake Lock API` in the [w3c page](https://w3c.github.io/screen-wake-lock/), read the documentation and then, to actually understand how to use this in an example, I went to [this page](https://w3c-test.org/screen-wake-lock/):
+I knew that in order to keep the screen on, one can keep an "invisible" video running. To test this, I put a real video and tested on my phone. The video played but it did not stop the screen from dimming and shutting down. So, I started searching some other methods. I found this `Screen Wake Lock API` in the [w3c page](https://w3c.github.io/screen-wake-lock/), read the documentation and then, to actually understand how to use this in an example, I went to [this page](https://w3c-test.org/screen-wake-lock/):
 
-<img width="100%" style="margin: 0.5rem;" src="/assets/screenshotw3c.png" alt="screen wake lock w3c page screenshot">
+<img href="https://w3c-test.org/screen-wake-lock/" width="100%" style="margin: 0.5rem;" src="/assets/screenshotw3c.png" alt="screen wake lock w3c page screenshot">
 
 And I clicked in almost everything in this page and didn't found a demo as I expected, only code. One of the biggest struggles in learning code is the lack of good explanations - this is an example of this. The documentation is ok to understand, but this page got me lost. In my opinion, only an experienced developer can actually understand this with ease.
 
@@ -38,9 +38,9 @@ Then, I decided to look into my benchmark, the [meditation timer app](https://me
 
 I was curious to understand what this library does. And I'm gonna try to explain bellow, but I'm removing the iOS rules just to make it simpler, but you can see its full code [here](https://github.com/richtr/NoSleep.js/blob/master/src/index.js). 
 
-In a nutshell, it tries a bunch of different `if else` rules that go from checking  `wakeLock` availability, to creating a video in the background - all this to guarantee it will work in all browsers.
+First it tries to detect a native **Wake Lock API support**. If it isn't supported, then it creates a video in two different formats, _.webm_ and _.mp4_ also to guarantee it will work in all platforms. Then, it plays this video in a loop. So, while using the library, all I had to do was add `noSleep.enable()` to the play button function and add `noSleep.disable()` to the function that ends the meditation. 
 
-First it tries to detect a native **Wake Lock API support**. If it isn't supported, then it creates a video in a loop with two different formats, _.webm_ and _.mp4_ also to guarantee it will work in all platforms. Then, it also puts this video in an eternal loop. So, whil using the library, all I had to do was add `noSleep.enable()` to the play button function and add `noSleep.disable()` to the function that ends the meditation. You can see my code [here](https://gitlab.com/elena_volpato/meditate/-/blob/master/src/views/Meditate.vue).
+You can see my code [here](https://gitlab.com/elena_volpato/meditate/-/blob/master/src/views/Meditate.vue).
 
 Now, I'm gonna work on making it available offline.
 
