updated last post

--- a/docs/_posts/2021-06-22-kata-week2.md
+++ b/docs/_posts/2021-06-22-kata-week2.md
@@ -11,9 +11,9 @@ featuredimg: '/assets/kata.png'
 summary: 'New week: challenge updated'
 ---
 
-The first week of myself imposed challenge is over. And I failed. 😞 The heat here was too intense - over 36C in some days - and it was overwhelming to stay at home and work. So we went to the park to enjoy the end of the day breeze, and in the weekend we went to a lake, and to the park to enjoy the end of the day breeze. To make things worse, I'm also playing [North Gard](https://www.nintendo.com/games/detail/northgard-switch/) for Switch, with makes me procrastinate A LOT! One game takes up to two hours...
+The first week of myself imposed challenge is over. And I failed. 😞 The heat here was too intense - over 36 degrees in some days - and it was overwhelming to stay at home and work. So we went to the park to enjoy the end of the day breeze, and in the weekend we went to a lake, and to the park to enjoy the end of the day breeze. 
 
-However, this week started great! I already did two katas, and worked on some improvements after finishing them - with the most important help from Edgar, the fiancé. 💜
+However, this week started great! I already did two katas, and after finishing them, I worked on some improvements - with the most important help from Edgar, the fiancé. 💜
 
 #### Monday Kata - week 2
 The first Kata was to sum all the digits in a number until it becomes only one digit, this one [here](https://www.codewars.com/kata/541c8630095125aba6000c00). 
