fixed typos in last post

--- a/docs/_posts/2021-06-22-kata-week2.md
+++ b/docs/_posts/2021-06-22-kata-week2.md
@@ -11,7 +11,7 @@ featuredimg: '/assets/kata.png'
 summary: 'New week: challenge updated'
 ---
 
-The first week of myself imposed challenge is over. And I failed. 😞 The heat here was too intense - over 36 degrees in some days - and it was overwhelming to stay at home and work. So we went to the park to enjoy the end of the day breeze, and in the weekend we went to a lake, and to the park to enjoy the end of the day breeze. 
+The first week of myself imposed challenge is over. And I failed. 😞 The heat here was too intense - over 36 degrees in some days - and it was overwhelming to stay at home and work. So we went to the park to enjoy the end of the day breeze, and in the weekend we went to a lake.
 
 However, this week started great! I already did two katas, and after finishing them, I worked on some improvements - with the most important help from Edgar, the fiancé. 💜
 
